# feathers

./: .gitignore  README.md  tree-sitter-sxiva
01 - 2020 Mar - Exploring an LCG with VivaGraphJS/: 01.naive-algo.subgraph.html  03.naive-algo.with-layouting.full-graph.UNFINISHED.html
01 - Exploring an LCG with VivaGraphJS/: 02.naive-algo.full-graph.SLOW.html  README.md
01 - Preliminary Layouts in VivaGraphJS/: README.md
01.layouts-in-vivagraphjs/: README.md
02 - 2020 Mar - OpenGL Hello World/: main
02 - OpenGL Hello World/: README.md
02.opengl-hello-world/: README.md
03 - L Diagrams/: whiteboard.md
03 - Modern Library Reading Club/: README.md  completed-books.bak
03.l-diagrams/: whiteboard.md
04 - Fiction/: marco.md
05 - Keyper/: keyper.html
05.x1-v2/: authorized_rest_client.h  base64.cpp  enum.h  enum_with_default_constructors.h  markdown_table_scanner.h
06 - X1_2/: CMakeLists.txt  authorized_rest_client.cpp  authorized_rest_client_config.h  base64.h  main.cpp
06.x1-v3/: btc-usd-1d  package-lock.json  test2.js
07 - X1_3/: .btc-usd-1d.swp  .test2.js.swp  asdf.js
07.x1-v4/: CMakeLists.txt  strtokm.h
08 - X1_4/: main.cpp
08.solo-gantt/: index.ts
09.smrng/: analyze_lcg.js  assembly.js  notebook-2.html
0a.algo-terra/: index.html  package.json  server.js
0b.algo-locke/: index.html
0c.algo-edgar/: index.html  package-lock.json  package.json  server.js  trades.txt
0d.algo-sabin/: index.html  orders.txt  server.js  test_l2_orderbook.js
0e.algo-cyan/: .eslintrc.js  .gitignore  jest.config.js  package-lock.json  package.json  tsconfig.scripts.json
10 - SMRNG/: notebook.html
11 - EAN/: flashcards.yaml
11.sxiv/: .gitignore  CHANGELOG.md  CLAUDE.md  DASHBOARD_PLAN.md  README.md  TESTING.md  compile_parser.sh  regenerate.sh  sxiva  test.sh
11.sxiv/tools/: INSTALL.md  README.md  pyproject.toml
11.sxiv/tools/sxiva/: __init__.py  calculator.py  cli.py  parser.py  parser_extractor.py  sync.py  time_parser.py
12.kaprekar/: .gitignore  CLAUDE.md  kaprekar.py  kaprekar_graph.py  kaprekar_lib.py  kaprekar_parallel.py  kaprekar_parallel_v2.py  kaprekar_plot.py  kaprekar_util
13.ean/: flashcards.yaml
14.writesys/: .gitignore  AGENTS.md  ANALYSIS-MISTAKES.md  CODE-AUDIT-NEVER-MIND.md  NEVER-MIND.md  PLAN.md  (+20 more)
(+880 files in other folders)
