[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "sxiva-tools"
version = "0.1.0"
description = "CLI tools for SXIVA time-tracking files"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "tree-sitter>=0.21.0",
    "click>=8.0.0",
]

[project.scripts]
sxiva = "sxiva.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["sxiva*"]
